# django-xml-widget

./: README.md  pyproject.toml
django_xml_widget/: widgets.py
django_xml_widget/templates/: xml-tree-view.html
