[tool.poetry]
name = "django-xml-widget"
version = "1.0.0"
description = "Widget for xml Django"
authors = ["penkhasoveg <pen.egor2002@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ghettoDdOS/django-xml-widget"
repository = "https://github.com/ghettoDdOS/django-xml-widget"
keywords = ["pve", "proxmox"]
include = [
    "LICENSE",
]

[tool.black]
line-length = 79

[tool.isort]
multi_line_output=3
include_trailing_comma=true
use_parentheses=true
line_length=79

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.9"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
